--- a/app/blocks/offer-select/offer-select.pug
+++ b/app/blocks/offer-select/offer-select.pug
@@ -1,5 +1,5 @@
 mixin offer-select(star)
-  +b.offer-select__.js-offer-select&attributes(attributes)
+  +b.js-offer-select.offer-select__&attributes(attributes)
     +e.head(data-head)
       +e.label(data-label)
       +e.toggle
