--- a/app/pages/about-host/about-host.pug
+++ b/app/pages/about-host/about-host.pug
@@ -8,29 +8,29 @@ block content
     +promo-section
       .container
         +promo-section-content
-          +promo-section-column._left._white._left_wide.js-sr_opacity
-            +breadcrumbs(['Home', 'About', 'About Space Pool for Hosts']).__breadcrumbs.js-sr_bottom
-            +logo-image-short('div')._short.__logo.js-sr_bottom
-            +promo-section-title().js-sr_bottom Spacepool <br> for Hosts
-            +promo-section-text._mg44.js-sr_bottom
+          +promo-section-column._left._white._left_wide.js-sr.js-sr_opacity
+            +breadcrumbs(['Home', 'About', 'About Space Pool for Hosts']).__breadcrumbs.js-sr.js-sr_bottom
+            +logo-image-short('div')._short.__logo.js-sr.js-sr_bottom
+            +promo-section-title().js-sr.js-sr_bottom Spacepool <br> for Hosts
+            +promo-section-text._mg44.js-sr.js-sr_bottom
               p Spacepool is a marketplace that connects workspace operators with the new generation of start-ups, scale-ups and established businesses.
               p We provide a service that will expose your space to a thriving community who are looking for flexible offices and workspaces from which to operate.
-            +e.buttons.js-sr_bottom
+            +e.buttons.js-sr.js-sr_bottom
               +button('a')(href="#")._border._border_bg-white._short._border_dark.__button Sign Up as a Host
-          +promo-section-column._right._media.js-sr_right
+          +promo-section-column._right._media.js-sr.js-sr_right
             +promo-section-media('assets/images/about-lead1.jpg')
     +promo-section._mg10
       .container
         +promo-section-content
-          +promo-section-column._left._left_picture.js-sr_left(data-slot-id="illustration" data-slot-res="xl")
+          +promo-section-column._left._left_picture.js-sr.js-sr_left(data-slot-id="illustration" data-slot-res="xl")
             +e.illustration_w136p-left._corr-pt._corr-mgr(data-target-slot="illustration")
               +e.IMG.picture(src="assets/images/illustration-1.svg")
           +promo-section-column._right._right_short
-            +e.top_mg102.js-sr_bottom
+            +e.top_mg102.js-sr.js-sr_bottom
               +slogan.__slogan ON YOUR TERMS
               +promo-section-text._big._bold As a Spacepool Host, you have the opportunity to list and hire out your workspace at your convenience. You’re in full control: availability, prices and house rules are up to you, giving you the ability to maximise your return and improve occupancy.
-            +e.middle.hide-from-md.js-sr_right(data-slot-id="illustration" data-slot-res="md")
-            +e.bottom.js-sr_bottom
+            +e.middle.hide-from-md.js-sr.js-sr_right(data-slot-id="illustration" data-slot-res="md")
+            +e.bottom.js-sr.js-sr_bottom
               +promo-section-text._small
                 p
                   b Our technology is secure and fully mobile-optimised, making it simple for you and your guests to list, search and hire workspaces on the go.
@@ -38,11 +38,11 @@ block content
 
     +promo-section._mg142
       .container
-        +promo-section-header._mg78.js-sr_top
+        +promo-section-header._mg78.js-sr.js-sr_top
           +promo-section-column._full
             +slogan.__slogan._pl BENEFITS
             +promo-section-title._pl Why list with Spacepool?
-        +promo-section-content.js-sr_bottom
+        +promo-section-content.js-sr.js-sr_bottom
           - var slider = getData('promo-slider-host.json');
           +slider-promo.js-slider-promo
             each item in slider
@@ -58,25 +58,25 @@ block content
                       +e.IMG.image(src=item.img class=imgClass)
     +promo-section
       .container
-        +promo-section-header.js-sr_top
+        +promo-section-header.js-sr.js-sr_top
           +promo-section-column._left._media
           +promo-section-column._right
             +slogan.__slogan GET STARTED IN 3 SIMPLE STEPS
             +promo-section-title How Does it Work?
         +promo-section-content
-          +promo-section-column._left._media.js-sr_left(data-slot-id="suggestion" data-slot-res="xl")
+          +promo-section-column._left._media.js-sr.js-sr_left(data-slot-id="suggestion" data-slot-res="xl")
             +promo-section-media('assets/images/about-lead3.jpg')._mask._content
               +e.description
                 +promo-section-text._big2._bold In modern world everything becomes faster, more convenient and common. Spacepool is breathing within the pulse of the generation bringing the simplicity and tangible advantages to the office rental industry.
-            +e.suggestion.js-sr_bottom(data-target-slot="suggestion")
+            +e.suggestion.js-sr.js-sr_bottom(data-target-slot="suggestion")
               +promo-section-text._small._mg64 Spacepool is the right place to find new tenants without large investments. Just start with our Step by Step sign up form and get listed within 24 hours!
               +e.buttons
                 +button('a')(href="#")._border._border_dark._short.__button Sign Up as a Host
-          +promo-section-column._right._white.js-sr_opacity
-            +feature('assets/images/picture-signup.svg', 'Sign-up', '_signup').js-sr_bottom Complete our simple online registration form and create your first listing. Once we have reviewed your application, your listing will go live. We may contact you if we have any questions or need to arrange a site visit.
-            +feature('assets/images/picture-messages.svg', 'Receive viewing and hire requests', '_messages').js-sr_bottom Once your listing is live, Guests can request to view or hire your workspace. You can accept, reject or contact the Guest at your convenience.
-            +feature('assets/images/picture-payments.svg', 'Get paid', '_payments').js-sr_bottom The Guest makes payment as soon as you accept the hire request. We transfer the balance directly to you, less our fee.
-          +promo-section-column._left._centered.hide-from-md.js-sr_bottom(data-slot-id="suggestion" data-slot-res="md")
+          +promo-section-column._right._white.js-sr.js-sr_opacity
+            +feature('assets/images/picture-signup.svg', 'Sign-up', '_signup').js-sr.js-sr_bottom Complete our simple online registration form and create your first listing. Once we have reviewed your application, your listing will go live. We may contact you if we have any questions or need to arrange a site visit.
+            +feature('assets/images/picture-messages.svg', 'Receive viewing and hire requests', '_messages').js-sr.js-sr_bottom Once your listing is live, Guests can request to view or hire your workspace. You can accept, reject or contact the Guest at your convenience.
+            +feature('assets/images/picture-payments.svg', 'Get paid', '_payments').js-sr.js-sr_bottom The Guest makes payment as soon as you accept the hire request. We transfer the balance directly to you, less our fee.
+          +promo-section-column._left._centered.hide-from-md.js-sr.js-sr_bottom(data-slot-id="suggestion" data-slot-res="md")
 
 block panels
   +main-menu
