--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -14,7 +14,7 @@ block content
     .nd-container
       +nd-section-header
         +nd-section-title Our favourite Spaces
-    +nd-slider(true, false).__slider.js-nd-slider.js-sr_opacity
+    +nd-slider(true, false).__slider.js-nd-slider.js-sr.js-sr_opacity
       each item in getData('nd-spaces.json')
         +nd-space('a').__slide_space.swiper-slide(href="#")
           +nd-space-media()(data-slider-buttons-orientir)
@@ -37,16 +37,16 @@ block content
     .nd-container
       +nd-section-content._promo
         +text-block.__describe
-          +e.H4.title_md-fz28.js-sr_bottom-slow Hassle-free process with <i>spacepool</i>
-          +e.content_md-fz14.js-sr_bottom-slow Finding the right office can be long and tedious. But with spacepool, the process is streamlined into four simple steps. And we’ll help you through each one, with a curated selection of spaces and direct lines to Hosts instead of agents.
-        +promo-slider.__promo-slider.js-sr_opacity
+          +e.H4.title_md-fz28.js-sr.js-sr_bottom-slow Hassle-free process with <i>spacepool</i>
+          +e.content_md-fz14.js-sr.js-sr_bottom-slow Finding the right office can be long and tedious. But with spacepool, the process is streamlined into four simple steps. And we’ll help you through each one, with a curated selection of spaces and direct lines to Hosts instead of agents.
+        +promo-slider.__promo-slider.js-sr.js-sr_opacity
           each item in getData('nd-promo-slides.json')
             +promo-slider-slide(item)
   +nd-section
     .nd-container
       +nd-section-header
         +nd-section-title New on spacepool
-    +nd-slider(true, false).__slider.js-nd-slider.js-sr_opacity
+    +nd-slider(true, false).__slider.js-nd-slider.js-sr.js-sr_opacity
       each item in getData('nd-spaces.json')
         +nd-space('a').__slide_space.swiper-slide(href="#")
           +nd-space-media()(data-slider-buttons-orientir)
@@ -70,14 +70,14 @@ block content
       +nd-section-header
         +nd-section-title Day pass offers
       +text-block._grid._grid_dpo.__content
-        +text-block-image('assets/images/nd/section-image-1.jpg')._contain.js-sr_opacity
-        +e.H4.title.js-sr_bottom-slow Like working from different locations, or don’t want to commit to a contract?
+        +text-block-image('assets/images/nd/section-image-1.jpg')._contain.js-sr.js-sr_opacity
+        +e.H4.title.js-sr.js-sr_bottom-slow Like working from different locations, or don’t want to commit to a contract?
           br
           i Try our Coworking Day Pass
-        +e.content_fw500.js-sr_bottom-slow  Our Coworking Day Passes give you the flexibility to rent workspace on-demand. Just find an offer from our wide selection of Day Passes, choose when you want to work there – and turn up on the day.
-        +e.buttons.js-sr_bottom-slow
+        +e.content_fw500.js-sr.js-sr_bottom-slow  Our Coworking Day Passes give you the flexibility to rent workspace on-demand. Just find an offer from our wide selection of Day Passes, choose when you want to work there – and turn up on the day.
+        +e.buttons.js-sr.js-sr_bottom-slow
           +nd-button().__button(href="#") Explore day pass offers
-    +nd-slider(true, false).__slider.js-nd-slider.js-sr_opacity
+    +nd-slider(true, false).__slider.js-nd-slider.js-sr.js-sr_opacity
       each item in getData('nd-spaces-2.json')
         +nd-space('a').__slide_space.swiper-slide(href="#")
           +nd-space-media()(data-slider-buttons-orientir)
@@ -97,9 +97,9 @@ block content
           +nd-space-title()!=item.title
           +nd-space-text()._any-fz15!=item.text
   +promo('assets/images/nd/promo-bg.jpg')
-    +e.text.js-sr_bottom-slow Finding an office should be exciting. With spacepool, it’s also simple, quick and secure.
-    +nd-button().__button.js-sr_bottom-slow(href="#") Find out why
-    +e.note.nd-hide-sm.js-sr_bottom-slow Explore some of London’s most prestigious, well located and best value workspaces – without moving an inch.
+    +e.text.js-sr.js-sr_bottom-slow Finding an office should be exciting. With spacepool, it’s also simple, quick and secure.
+    +nd-button().__button.js-sr.js-sr_bottom-slow(href="#") Find out why
+    +e.note.nd-hide-sm.js-sr.js-sr_bottom-slow Explore some of London’s most prestigious, well located and best value workspaces – without moving an inch.
   +nd-section.nd-hide-sm
     .nd-container
       +nd-section-header
@@ -115,13 +115,13 @@ block content
   +nd-section
     .nd-container
       +text-block._grid.__content
-        +text-block-image('assets/images/nd/section-image-2.jpg').js-sr_opacity
+        +text-block-image('assets/images/nd/section-image-2.jpg').js-sr.js-sr_opacity
         +e.wrapper
-          +e.H4.title.js-sr_bottom-slow Leasing made easy - find new tenants, manage multiple locations and close deals in minutes <i>through spacepool!</i>
-          +e.content_fw500.js-sr_bottom-slow At spacepool, we understand how difficult it can be to manage an office.. So, we make life simpler by helping you find new tenants and sign contracts, automating all your billing and payments, and giving you the freedom to manage multiple locations from one account. All so you can focus on things that matter – building your community.
-          +e.links.js-sr_bottom-slow
+          +e.H4.title.js-sr.js-sr_bottom-slow Leasing made easy - find new tenants, manage multiple locations and close deals in minutes <i>through spacepool!</i>
+          +e.content_fw500.js-sr.js-sr_bottom-slow At spacepool, we understand how difficult it can be to manage an office.. So, we make life simpler by helping you find new tenants and sign contracts, automating all your billing and payments, and giving you the freedom to manage multiple locations from one account. All so you can focus on things that matter – building your community.
+          +e.links.js-sr.js-sr_bottom-slow
             +nd-link._underline.__link_bold(href="#") Read more about being spacepool Host
-          +e.buttons.js-sr_bottom-slow
+          +e.buttons.js-sr.js-sr_bottom-slow
             +nd-button.__button(href="#") Become a Host
 
 block panels
