--- a/app/blocks/offer-select/offer-select.scss
+++ b/app/blocks/offer-select/offer-select.scss
@@ -5,6 +5,14 @@
   position: relative;
   background-color: $color-white;
 
+  &:hover {
+    box-shadow: 1px 1px 8px rgba(34, 42, 46, .18);
+  }
+
+  &.is-open {
+    box-shadow: 1px 1px 8px rgba(34, 42, 46, .18);
+  }
+
   &::before {
     @include pseudo;
 
@@ -17,10 +25,29 @@
     opacity: 0;
     transition: opacity $ease-main;
     border: 1px solid transparent;
-    border-left-color: $color-text-light;
-    border-right-color: $color-text-light;
+    padding: 0 1px;
+    // border-left-color: $color-text-light;
+    // border-right-color: $color-text-light;
     border-bottom-color: $color-border-light;
     box-sizing: border-box;
+    background-clip: content-box;
+  }
+
+  &_nd::before {
+    height: 10px;
+    border-bottom-color: $nd-color-border4;
+
+    @include screen('lg', max, 2) {
+      height: pxtovw(10, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      height: pxtovw(10, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      height: pxtovw(10, 375);
+    }
   }
 
   &.is-open::before {
@@ -43,14 +70,56 @@
 
     #{$b}:hover & {
       border-color: $color-text-light;
-      box-shadow: 1px 1px 8px rgba(34, 42, 46, .18);
+      // box-shadow: 1px 1px 8px rgba(34, 42, 46, .18);
     }
 
     #{$b}.is-open & {
       border-radius: 3px 3px 0 0;
       border-color: $color-text-light;
-      box-shadow: 1px 1px 8px rgba(34, 42, 46, .18);
+      // box-shadow: 1px 1px 8px rgba(34, 42, 46, .18);
       border-bottom-color: transparent;
+    }
+
+    #{$b}_nd & {
+      height: 80px;
+      border-color: $nd-color-border4;
+
+      @include screen('xlg', max, 2) {
+        height: 76px;
+      }
+
+      @include screen('lg', max, 2) {
+        height: pxtovw(76, 1366);
+        border-radius: pxtovw(3, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        height: pxtovw(76, 960);
+        border-radius: pxtovw(3, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        height: pxtovw(76, 375);
+        border-radius: pxtovw(3, 375);
+      }
+    }
+
+    // #{$b}_nd:hover & {
+    //   border-color: $nd-color-basic;
+    // }
+
+    #{$b}_nd.is-open & {
+      @include screen('lg', max, 2) {
+        border-radius: pxtovw(3, 1366) pxtovw(3, 1366) 0 0;
+      }
+
+      @include screen('md', max, 2) {
+        border-radius: pxtovw(3, 960) pxtovw(3, 960) 0 0;
+      }
+
+      @include screen('sm', max, 2) {
+        border-radius: pxtovw(3, 375) pxtovw(3, 375) 0 0;
+      }
     }
   }
 
@@ -69,6 +138,20 @@
     #{$b}.is-open & {
       transform: translate3d(0, -50%, 0) rotate(180deg);
     }
+
+    #{$b}_nd & {
+      @include screen('lg', max, 2) {
+        right: pxtovw(18, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        right: pxtovw(18, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        right: pxtovw(18, 375);
+      }
+    }
   }
 
   &__label {
@@ -76,6 +159,20 @@
     width: 100%;
     box-sizing: border-box;
     padding: 10px 35px 0 15px;
+
+    #{$b}_nd & {
+      @include screen('lg', max, 2) {
+        padding: pxtovw(10, 1366) pxtovw(35, 1366) 0 pxtovw(15, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        padding: pxtovw(10, 960) pxtovw(35, 960) 0 pxtovw(15, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        padding: pxtovw(10, 375) pxtovw(35, 375) 0 pxtovw(15, 375);
+      }
+    }
   }
 
   &__star {
@@ -89,12 +186,60 @@
     text-align: center;
     font-weight: 400;
     z-index: 2;
+
+    #{$b}_nd & {
+      right: 0;
+      font-size: 0;
+      line-height: 0;
+      width: 22px;
+      height: 22px;
+      color: $nd-color-gray-text;
+      background-size: 6px;
+      background-position: 50% 50%;
+      background-repeat: no-repeat;
+      background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.458 5.909L3.363 3.819L5.111 4.94L5.719 3.914L3.876 2.964L5.719 2.014L5.111 0.969L3.363 2.09L3.458 0H2.261L2.356 2.09L0.589 0.969L0 2.014L1.843 2.964L0 3.914L0.589 4.94L2.356 3.819L2.261 5.909H3.458Z' fill='%2386919E'/%3E%3C/svg%3E%0A");
+
+      @include screen('lg', max, 2) {
+        width: pxtovw(22, 1366);
+        height: pxtovw(22, 1366);
+        background-size: pxtovw(6, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        width: pxtovw(22, 960);
+        height: pxtovw(22, 960);
+        background-size: pxtovw(6, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        width: pxtovw(22, 375);
+        height: pxtovw(22, 375);
+        background-size: pxtovw(6, 375);
+      }
+    }
   }
 
   &__icon {
     width: 12px;
     height: 7px;
     color: currentColor;
+
+    #{$b}_nd & {
+      @include screen('lg', max, 2) {
+        width: pxtovw(12, 1366);
+        height: pxtovw(7, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        width: pxtovw(12, 960);
+        height: pxtovw(7, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        width: pxtovw(12, 375);
+        height: pxtovw(7, 375);
+      }
+    }
   }
 
   &__dropdown {
@@ -135,6 +280,63 @@
       opacity: 1;
       pointer-events: auto;
     }
+
+    #{$b}_nd & {
+      width: calc(100% + 94px);
+      max-height: 326px;
+      border-radius: 3px 0 3px 3px;
+      // border-color: $nd-color-basic;
+
+      @include screen('lg', max, 2) {
+        width: calc(100% + ((9400 / 1366) * 1vw));
+        max-height: pxtovw(326, 1366);
+        border-radius: pxtovw(3, 1366) 0 pxtovw(3, 1366) pxtovw(3, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        width: calc(100% + ((9400 / 960) * 1vw));
+        max-height: pxtovw(326, 960);
+        border-radius: pxtovw(3, 960) 0 pxtovw(3, 960) pxtovw(3, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        width: calc(100% + ((9400 / 375) * 1vw));
+        max-height: pxtovw(326, 375);
+        border-radius: pxtovw(3, 375) 0 pxtovw(3, 375) pxtovw(3, 375);
+      }
+    }
+
+    #{$b}_nd.offer-select_right & {
+      border-radius: 3px 0 3px 3px;
+
+      @include screen('lg', max, 2) {
+        border-radius: pxtovw(3, 1366) 0 pxtovw(3, 1366) pxtovw(3, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        border-radius: pxtovw(3, 960) 0 pxtovw(3, 960) pxtovw(3, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        border-radius: pxtovw(3, 375) 0 pxtovw(3, 375) pxtovw(3, 375);
+      }
+    }
+
+    #{$b}_nd.offer-select_left & {
+      border-radius: 0 3px 3px;
+
+      @include screen('lg', max, 2) {
+        border-radius: 0 pxtovw(3, 1366) pxtovw(3, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        border-radius: 0 pxtovw(3, 960) pxtovw(3, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        border-radius: 0 pxtovw(3, 375) pxtovw(3, 375);
+      }
+    }
   }
 
   &__list {
@@ -155,6 +357,34 @@
       width: 100%;
       box-sizing: border-box;
       padding: 13px 15px;
+    }
+
+    #{$b}_nd & {
+      @include screen('lg', max, 2) {
+        min-height: pxtovw(83, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        min-height: pxtovw(83, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        min-height: pxtovw(83, 375);
+      }
+
+      .offer-item {
+        @include screen('lg', max, 2) {
+          padding: pxtovw(13, 1366) pxtovw(15, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          padding: pxtovw(13, 960) pxtovw(15, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          padding: pxtovw(13, 375) pxtovw(15, 375);
+        }
+      }
     }
   }
 }
