--- a/app/layouts/default-special.pug
+++ b/app/layouts/default-special.pug
@@ -27,9 +27,9 @@ html(lang='en')
     +info-notices({indicator: 2, title: 'Messages', link: {xlname: 'View all Messages', mdname: 'Read all messages', indicator: 2}})#messages-list
       each item in messages
         +notice(item)
-    +cookies.js-sr_opacity
+    +cookies.js-sr.js-sr_opacity
     block panels
-    +footer-special.js-sr_bottom
+    +footer-special.js-sr.js-sr_bottom
     script(src='assets/scripts/libs/object-assign-auto.min.js')
     script(src='assets/scripts/app.min.js')
     script(src='assets/scripts/main.js')
