--- a/app/pages/space/space-v3.pug
+++ b/app/pages/space/space-v3.pug
@@ -62,7 +62,7 @@ block content
 
       +nd-content-aside
         +sidebar.nd-sidebar.nd-hide-md
-          div Здесь будет стикер
+          +scroll-form-v3
 
       +e.column_footer
         +nd-section
